--- a/app/src/main/res/layout/fragment_generic_list.xml
+++ b/app/src/main/res/layout/fragment_generic_list.xml
@@ -4,10 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".book.OwnedBooks.OwnedAcceptedFragment">
+    tools:context=".book.GenericListFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
+        android:id="@+id/tempMessage"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="owned accepted"
