--- a/app/src/main/res/layout/activity_book.xml
+++ b/app/src/main/res/layout/activity_book.xml
@@ -5,21 +5,36 @@
   android:layout_width="match_parent"
   android:layout_height="match_parent">
 
+    <androidx.appcompat.widget.Toolbar
+      android:id="@+id/book_toolbar"
+      android:layout_width="match_parent"
+      android:layout_height="?attr/actionBarSize"
+      android:background="@color/colorPrimary"
+      android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toTopOf="parent"
+      app:titleTextColor="@color/colorTextLight"/>
+
     <androidx.viewpager2.widget.ViewPager2
       android:id="@+id/view_pager_main"
-      android:layout_width="409dp"
+      android:layout_width="0dp"
       android:layout_height="0dp"
       android:layout_marginBottom="1dp"
       app:layout_constraintBottom_toTopOf="@+id/tabs_main"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toTopOf="parent" />
+      app:layout_constraintTop_toBottomOf="@+id/book_toolbar" />
 
     <com.google.android.material.tabs.TabLayout
       android:id="@+id/tabs_main"
       android:layout_width="match_parent"
       android:layout_height="0dp"
       android:layout_marginEnd="1dp"
+      android:background="@color/colorPrimary"
+      app:tabSelectedTextColor="@color/colorSecondary"
+      app:tabIndicatorColor="@color/colorSecondary"
+      app:tabTextColor="@color/colorTextLight"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintEnd_toStartOf="parent">
@@ -28,31 +43,31 @@
           android:id="@+id/tab_owned_books"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
-          android:text="Owned" />
+          android:icon="@drawable/book_icon" />
 
         <com.google.android.material.tabs.TabItem
           android:id="@+id/tab_borrowed_books"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
-          android:text="Lent" />
+          android:icon="@drawable/outgoing_icon"/>
 
         <com.google.android.material.tabs.TabItem
           android:id="@+id/tab_search"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
-          android:text="Search" />
+          android:icon="@drawable/search_icon" />
 
         <com.google.android.material.tabs.TabItem
           android:id="@+id/tab_location"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
-          android:text="Map" />
+          android:icon="@drawable/location_icon" />
 
         <com.google.android.material.tabs.TabItem
           android:id="@+id/tab_settings"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
-          android:text="Settings" />
+          android:icon="@drawable/settings_icon" />
     </com.google.android.material.tabs.TabLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
