--- a/app/src/main/res/layout/fragment_welcome.xml
+++ b/app/src/main/res/layout/fragment_welcome.xml
@@ -7,43 +7,79 @@
     tools:context=".auth.WelcomeFragment">
 
     <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="19dp"
-        android:text="Welcome Screen"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+      android:id="@+id/welcome_header"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_marginTop="32dp"
+      android:text="@string/welcome_page_welcome"
+      android:textColor="@android:color/black"
+      android:textSize="20sp"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintHorizontal_bias="0.5"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+      android:id="@+id/welcome_subheader"
+      android:layout_width="0dp"
+      android:layout_height="80dp"
+      android:layout_marginTop="24dp"
+      android:text="@string/welcome_page_welcome_message"
+      android:textAlignment="center"
+      android:textSize="20sp"
+      app:layout_constraintEnd_toStartOf="@+id/welcome_guideline_left"
+      app:layout_constraintStart_toStartOf="@+id/welcome_guideline_right"
+      app:layout_constraintTop_toBottomOf="@+id/welcome_header" />
+    <androidx.constraintlayout.widget.Guideline
+      android:id="@+id/welcome_guideline_left"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:orientation="vertical"
+      app:layout_constraintGuide_end="30dp" />
+    <androidx.constraintlayout.widget.Guideline
+      android:id="@+id/welcome_guideline_up"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:orientation="horizontal"
+      app:layout_constraintGuide_begin="254dp" />
+    <androidx.constraintlayout.widget.Guideline
+      android:id="@+id/welcome_guideline_right"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:orientation="vertical"
+      app:layout_constraintGuide_begin="30dp" />
+    <androidx.constraintlayout.utils.widget.ImageFilterView
+      android:id="@+id/welcome_img"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:src="@drawable/undraw_book_reader"
+      app:layout_constraintTop_toTopOf="@+id/welcome_guideline_up" />
 
     <Button
-        android:id="@+id/go_signup"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="134dp"
-        android:layout_marginTop="43dp"
-        android:layout_marginEnd="134dp"
-        android:layout_marginBottom="24dp"
-        android:text="Create Account"
-        app:layout_constraintBottom_toTopOf="@+id/login"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+      android:id="@+id/welcome_signup"
+      android:layout_width="0dp"
+      android:layout_height="wrap_content"
+      android:layout_marginTop="100dp"
+      android:background="@color/colorPrimary"
+      android:text="@string/welcome_create_account"
+      android:textColor="@color/colorTextLight"
+      android:textSize="20sp"
+      app:layout_constraintEnd_toStartOf="@+id/welcome_guideline_left"
+      app:layout_constraintStart_toStartOf="@+id/welcome_guideline_right"
+      app:layout_constraintTop_toBottomOf="@+id/welcome_img" />
 
-    <Button
-        android:id="@+id/go_login"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="162dp"
-        android:layout_marginTop="24dp"
-        android:layout_marginEnd="162dp"
-        android:layout_marginBottom="193dp"
-        android:text="Login"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/go_signup" />
+    <TextView
+      android:id="@+id/welcome_login"
+      android:layout_width="0dp"
+      android:layout_height="wrap_content"
+      android:layout_marginTop="16dp"
+      android:clickable="true"
+      android:text="@string/welcome_login"
+      android:textAlignment="center"
+      android:textColor="@color/colorPrimary"
+      android:textSize="16sp"
+      app:layout_constraintEnd_toStartOf="@+id/welcome_guideline_left"
+      app:layout_constraintStart_toStartOf="@+id/welcome_guideline_right"
+      app:layout_constraintTop_toBottomOf="@+id/welcome_signup" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
