--- a/app/src/main/res/layout/fragment_welcome.xml
+++ b/app/src/main/res/layout/fragment_welcome.xml
@@ -12,12 +12,21 @@
       android:layout_height="wrap_content"
       android:layout_marginTop="32dp"
       android:text="@string/welcome_page_welcome"
-      android:textColor="@android:color/black"
-      android:textSize="20sp"
+      android:textColor="@color/colorPrimary"
+      android:textSize="24sp"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.5"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent" />
+
+    <androidx.constraintlayout.utils.widget.ImageFilterView
+      android:id="@+id/imageFilterView"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:src="@drawable/logo_boromi_text"
+      app:layout_constraintEnd_toStartOf="@+id/welcome_guideline_left"
+      app:layout_constraintStart_toStartOf="@+id/welcome_guideline_right"
+      app:layout_constraintTop_toBottomOf="@+id/welcome_header" />
 
     <TextView
       android:id="@+id/welcome_subheader"
@@ -29,7 +38,7 @@
       android:textSize="20sp"
       app:layout_constraintEnd_toStartOf="@+id/welcome_guideline_left"
       app:layout_constraintStart_toStartOf="@+id/welcome_guideline_right"
-      app:layout_constraintTop_toBottomOf="@+id/welcome_header" />
+      app:layout_constraintTop_toBottomOf="@+id/imageFilterView" />
     <androidx.constraintlayout.widget.Guideline
       android:id="@+id/welcome_guideline_left"
       android:layout_width="wrap_content"
