--- a/app/src/main/res/drawable/return_circle.xml
+++ b/app/src/main/res/drawable/return_circle.xml
@@ -1,7 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/colorPrimary"/>
-    <stroke android:width="1dp" android:color="#FFFFFF" />
-    <corners android:radius="15dp"/>
-    <padding android:left="0dp" android:top="0dp" android:right="0dp" android:bottom="0dp" />
+  <corners android:radius="15dp" />
+  <padding
+    android:bottom="0dp"
+    android:left="0dp"
+    android:right="0dp"
+    android:top="0dp" />
+  <solid android:color="@color/colorPrimary" />
+  <stroke
+    android:color="#FFFFFF"
+    android:width="1dp" />
 </shape>
