--- a/app/src/main/res/layout/add_book_fragment.xml
+++ b/app/src/main/res/layout/add_book_fragment.xml
@@ -1,55 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="300dp"
+  xmlns:app="http://schemas.android.com/apk/res-auto"
+  xmlns:tools="http://schemas.android.com/tools"
+  android:layout_width="300dp"
+  android:layout_height="wrap_content"
+  android:layout_gravity="center"
+  android:padding="8dp"
+  android:background="@drawable/cardshape"
+  android:orientation="vertical"
+  tools:context=".book.AddBookFragment">
+
+  <Button
+    android:id="@+id/add_book_add_button"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_gravity="center"
-    android:padding="8dp"
-    android:background="@drawable/cardshape"
-    android:orientation="vertical">
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:paddingHorizontal="5dp"
-        android:paddingVertical="8dp"
-        android:text="Enter your books' information below and we'll add it to your collection"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body1"></TextView>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <ImageButton android:background="@drawable/camera_circle"
-            android:layout_height="38dp"
-            android:layout_width="38dp"
-            android:layout_margin="5dp"
-            app:srcCompat="@drawable/add_photo_icon"
-            android:layout_marginEnd="5dp"
-            android:layout_marginStart="5dp"
-            android:id="@+id/book_image"/>
-
-        <EditText
-            android:id="@+id/author"
-            android:layout_width="251dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:background="#22191919"
-            android:padding="8dp"
-            android:layout_margin="5dp"
-            android:text="Author">
-        </EditText>
-    </LinearLayout>
-    <EditText
-        android:id="@+id/title"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:layout_margin="5dp"
-        android:padding="8dp"
-        android:background="#22191919"
-        android:text="Title"></EditText>
-    <EditText
-    android:id="@+id/isbn"
+    android:layout_weight="1"
+    android:layout_margin="5dp"
+    android:background="@drawable/return_circle"
+    android:text="ADD BOOK"
+    android:textColor="#FFFFFF"></Button>
+  <EditText
+    android:id="@+id/add_book_isbn"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_weight="1"
@@ -57,14 +28,46 @@
     android:padding="8dp"
     android:background="#22191919"
     android:text="ISBN"></EditText>
-    <Button
-        android:id="@+id/add_button"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:layout_margin="5dp"
-        android:text="ADD BOOK"
-        android:textColor="#FFFFFF"
-        android:background="@drawable/return_circle"></Button>
+  <EditText
+    android:id="@+id/add_book_title"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_weight="1"
+    android:layout_margin="5dp"
+    android:padding="8dp"
+    android:background="#22191919"
+    android:text="Title"></EditText>
+  <LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
+    <EditText
+      android:id="@+id/add_book_author"
+      android:layout_width="251dp"
+      android:layout_height="wrap_content"
+      android:layout_weight="1"
+      android:layout_margin="5dp"
+      android:padding="8dp"
+      android:background="#22191919"
+      android:text="Author"></EditText>
+
+    <ImageButton
+      android:id="@+id/add_book_image"
+      android:layout_width="38dp"
+      android:layout_height="38dp"
+      android:layout_margin="5dp"
+      android:layout_marginStart="5dp"
+      android:layout_marginEnd="5dp"
+      android:background="@drawable/camera_circle"
+      android:scaleType="fitXY"
+      app:srcCompat="@drawable/add_photo_icon" />
+  </LinearLayout>
+  <TextView
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:gravity="center"
+    android:paddingHorizontal="5dp"
+    android:paddingVertical="8dp"
+    android:text="Enter your books' information below and we'll add it to your collection"
+    android:textAppearance="@style/TextAppearance.AppCompat.Body1"></TextView>
 
 </LinearLayout>
