--- a/app/src/main/res/layout/fragment_generic_list.xml
+++ b/app/src/main/res/layout/fragment_generic_list.xml
@@ -12,10 +12,17 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:text="owned accepted"
-    app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintHorizontal_bias="0.5"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent" />
 
+  <androidx.recyclerview.widget.RecyclerView
+    android:id="@+id/generic_list"
+    android:layout_width="match_parent"
+    android:layout_height="0dp"
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toBottomOf="@+id/tempMessage" />
 </androidx.constraintlayout.widget.ConstraintLayout>
